--- a/bttf/src/main/webapp/resources/css/custom.css
+++ b/bttf/src/main/webapp/resources/css/custom.css
@@ -17,10 +17,13 @@
     font-size: 16px;
     list-style: none;
     text-decoration: none;
+/*     background: #fafafa;  */
     
 }
 
-
+.bg_color{
+	background-color: #fafafa !important;
+}
 
 /*margin-top*/
 .mt-1{
