--- a/bttf/src/main/webapp/resources/css/custom.css
+++ b/bttf/src/main/webapp/resources/css/custom.css
@@ -114,6 +114,14 @@
 .ml-5{
     margin-left: 3rem !important;
 }
+
+.ml-6{
+    margin-left: 6rem !important;	
+}
+
+.ml-7{
+    margin-left: 12rem !important;	
+}
 /*margin-left end*/
 
 /*margin-right*/
