--- a/bttf/src/main/webapp/WEB-INF/views/member/findid_ok2.html
+++ b/bttf/src/main/webapp/WEB-INF/views/member/findid_ok2.html
@@ -2,7 +2,7 @@
 <%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 <!DOCTYPE html>
 
-<html lang="ko" class="no-js bg_color">
+<html lang="ko" class="no-js">
 <!-- BEGIN HEAD -->
 
 <head>
@@ -37,57 +37,13 @@
 
 	<!-- c3 chart -->
 	<link href="../../../resources/vendor/c3-0.7.20/c3.css" rel="stylesheet">
-    <style>
-   
-        html {
-           height: 100%;
-        }
-        
-        body {
-            width:100%;
-            height:100%;
-            margin: 0;
-             padding-top: 200px;
-             padding-bottom: 40px;
-             font-family: "Nanum Gothic", arial, helvetica, sans-serif;
-             background-repeat: no-repeat;
-        }
-        
-         .card {
-             margin: 0 auto; /* Added */
-             float: none; /* Added */
-           
-        }
-     
-         #btn-Yes{
-             background-color: #17bed2;
-             border: none;
-         }
-        
-        .form-signin .form-control {
-             position: relative;
-             height: auto;
-             -webkit-box-sizing: border-box;
-             -moz-box-sizing: border-box;
-                 box-sizing: border-box;
-             padding: 10px;
-             font-size: 16px;
-        }
-         .card-title{
-             margin-left: 30px;
-         }
-         .links{
-             text-align: center;
-             margin-bottom: 10px;
-         }
-     
-         a{ 
-            color: #17bed2; text-decoration: none; 
-         }
-         .text2{
-            color : blue;
-         }
-    </style>
+    
+    <link rel="stylesheet" href="https://cdn.datatables.net/t/bs-3.3.6/jqc-1.12.0,dt-1.10.11/datatables.min.css"/> 
+    <script src="https://cdn.datatables.net/t/bs-3.3.6/jqc-1.12.0,dt-1.10.11/datatables.js"></script>
+    <script type="text/javascript" src="../../resource/js/board.js"></script>
+
+    <!-- c3 chart -->
+    <link href="../../resource/vendor/c3-0.7.20/c3.css" rel="stylesheet">
 </head>
 <!-- END HEAD -->
 
@@ -101,27 +57,72 @@
         <!-- Navbar -->
     </header>
     <!--========== END HEADER ==========-->
-    <div class="container-fluid">
-        <div class="row">
-            <div class="card align-middle col-md-3 login_card" >
-                <div class="card-title" style="margin-top:30px;">         
-                    <h2 class="card-title" style="color:#f58b34;"><img src="../../../resources/img/home_logo.png"/></h2>
-                </div>     
-                <div class="card-body">
-                    <form class="form-signin" action="/member/findid_ok" name="findid" method="POST">
-                        <input type="text" name="user_name" id="user_name" class="form-control" placeholder="이름" required><br>
-                        <input type="tel" name="user_phone" id="user_phone" class="form-control" oninput="autoHyphen(this)" maxlength="13" placeholder="핸드폰번호" required><br>
-                        <input id="btn-Yes" class="btn btn-lg btn-primary btn-block" type="submit" value="이메일찾기" >
-                    </form>
-                </div>
-                <div class="links" style="padding: 10px 20px;">
-                    <a href="/member/findpw">비밀번호 찾기</a> | <a onclick="history.go(-1);">로그인</a> | <a href="/member/signup">회원가입</a>
-                </div>
-            </div>
-        </div>
-    </div> 
-    <footer class="footer fixed_footer">
 
+    <!--========== SLIDER ==========-->
+    
+    <!--========== SLIDER ==========-->
+
+    <!--========== PAGE LAYOUT ==========-->
+    <!-- Service -->
+    <div class="bg-color-sky-light fixed_container" data-auto-height="true">
+        <div class="content-lg container" style="margin-top : 50px;">
+            <h1 class="pt-4">
+                <i class="fas fa-user-circle title_subject_icon"></i>
+                	아이디 찾기
+            </h1>
+            <div class="row row-space-1 margin-b-2">
+                <div class="col-sm-12 sm-margin-b-2" style="margin-bottom: 20px;">
+                    <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
+                        <div class="my_box_my_page text-center" data-height="height">
+                            <div class="my_box_my_page_element">
+                                <i class="my_box_my_page_icon fas fa-id-card"></i>
+                            </div>
+                            <div class="my_box_my_page_info">
+                                <h3>아이디 찾기가 완료되었습니다.</h3>
+                                <p>회원님의 아이디는 입니다.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 sm-margin-b-2">
+                    <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
+                        <div class="my_box_my_page text-center">
+                            <div class="my_box_my_page_element">
+                                <i class="my_box_my_page_icon fas fa-comment-alt"></i>
+                            </div>
+                            <div class="my_box_my_page_info">
+                                <h3>로그인</h3>
+                            </div>
+                            <a href="/member/signin" class="content-wrapper-link"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 sm-margin-b-2">
+                    <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
+                        <div class="my_box_my_page text-center">
+                            <div class="my_box_my_page_element">
+                                <i class="my_box_my_page_icon fas fa-comment-alt"></i>
+                            </div>
+                            <div class="my_box_my_page_info">
+                                <h3>비밀번호 찾기</h3>
+                            </div>
+                            <a href="/member/findpw" class="content-wrapper-link"></a>
+                        </div>
+                    </div>
+                </div>
+                
+                
+                
+                
+                <!--// end row -->
+            </div>
+            <!--// end row -->
+        </div>
+    </div>    
+    <!-- End Work -->
+    <!--========== END PAGE LAYOUT ==========-->
+    <!--========== FOOTER ==========-->
+    <footer class="footer fixed_footer">
         <!-- Copyright -->
 		<%@ include file="../include/footer_control.jsp" %>
         <!-- End Copyright -->
@@ -130,7 +131,7 @@
 
     <!-- Back To Top -->
     <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
-
+	
     <!-- JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
 	<!-- CORE PLUGINS -->
 	<script src="../../../resources/vendor/jquery.min.js" type="text/javascript"></script>
@@ -159,10 +160,8 @@
 	<script src="../../../resources/vendor/c3-0.7.20/c3.js"></script>
 	<script src="../../../resources/vendor/c3-0.7.20/docs/js/d3-5.8.2.min.js" charset="utf-8"></script>
 
-    <!-- sweet alert -->
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <!-- autohyphen -->
-    <script src="../../../resources/js/autoHyphen.js"></script>
+	
+	
 </body>
 <!-- END BODY -->
 
